--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 	<title>Latihan Git</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>Latihan Git</h1>
-	
+
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
