mengubah isi index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 
+	<h3>Judul 3</h3>
+	<a href="">Link 1</a>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
